manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fiber-name
spec:
  selector:
    app.kubernetes.io/name: fiber-name
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 5000
